# jssy

./: .gitignore  CMakeLists.txt  Makefile.am  configure.ac  libjssy.pc.in
include/: Makefile.am
include/jssy/: jssy.h  jssy_create.h
jssy/: CMakeLists.txt  Makefile.am  cmain.c  cppmain.cpp  helper.h  jssy.c  jssy.cpp  jssy.h  jssy.hpp  jssy_create.c  jssy_create.h  main.c  ptr_smart.hpp
jssy.xcodeproj/: project.pbxproj
