AM_CFLAGS = -I$(top_srcdir)/include $(GLOBAL_CFLAGS)
AM_CXXFLAGS = $(AM_CFLAGS) $(GLOBAL_CXXFLAGS)
#AM_LDFLAGS = 

lib_LTLIBRARIES = libjssy.la

libjssy_la_CFLAGS = $(AM_CFLAGS)
libjssy_la_CXXFLAGS = $(AM_CXXFLAGS)
libjssy_la_LDFLAGS = $(AM_LDFLAGS)
libjssy_la_SOURCES = 	jssy.c \
                      jssy_create.c
